Updated fonts and other styles.

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,17 @@
 body {
     color: midnightblue;
     background-color: azure;
+    font-family: "Verdana", "Arial", sans-serif;
+}
+
+h1, h2, h3 {
+    color: black;
+}
+
+nav {
+    border: 2px solid black;
+}
+
+h1 {
+    font-family: "Impact", fantasy;
 }
